# 1team_mini_PJT

./: .env  .env.example  .gitignore  CHANGELOG.md  DOCS.md  PROJECT_STRUCTURE.md  README.md  REPORT.md  REPORT.txt  REPORT_20260224.md  alter_db.py  analyzer.py  app.py  app_login.py  config.py  db_manager.py  fetch_inv.py  fix_paths.py  main.py  mini.ipynb  pyproject.toml  rtd_analyzer.py  scheduler_job.py  schema.sql  scrape_index.py  scraper.py  start.bat  test.py  test.txt  top_volume_20260223.csv  업무보고서_20260226.txt
data/: analysis_signals_20260225.json  analysis_signals_20260226.csv  analysis_signals_20260226.json  historical_20260226.csv  newsletter_20260224.txt  newsletter_20260225.txt  newsletters_20260225.json  newsletters_20260226.csv  newsletters_20260226.json  price_snapshots_20260225_094010.json  price_snapshots_20260225_094642.json  price_snapshots_20260225_101140.json  price_snapshots_20260225_103730.json  price_snapshots_20260225_142126.json  price_snapshots_20260225_144900.json  price_snapshots_20260225_152559.json  price_snapshots_20260225_153622.json  price_snapshots_20260226_103022.json  price_snapshots_20260226_112242.csv  recommendations_20260225.json  recommendations_20260226.csv  recommendations_20260226.json  stock_data_20260226.csv  stocks_20260225.json  stocks_20260226.csv  stocks_20260226.json  top_volume_20260226.csv  user_type_db.csv  user_type_db.json  users_db.csv  users_db.json
database_script/: A_users_table.py  B_users_type_table.py  Beautifulsoup_DB.ipynb  C_stocks_table.py  D_price_snapshots_table.py  E_analysis_signals.py  (+4 more)
(+30 files in other folders)
